--- a/nlmeans/nlmeans.vcxproj
+++ b/nlmeans/nlmeans.vcxproj
@@ -145,6 +145,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="core.h" />
+    <ClInclude Include="datastructures.h" />
+    <ClInclude Include="modifiednlmeans.h" />
     <ClInclude Include="nlmeans.h" />
     <ClInclude Include="stb_image.h" />
     <ClInclude Include="stb_image_write.h" />
